unpackaged/main/default/objects/Contract/fields/Chair_Collection_Contract_field__c.field-meta.xml
<CustomField>
    <fullName>Chair_Collection_Contract_field__c</fullName>
    <label>Chair Collection % (Contract field)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>