unpackaged/main/default/objects/Contract/fields/Day_rate_contract_field__c.field-meta.xml
<CustomField>
    <fullName>Day_rate_contract_field__c</fullName>
    <label>Day rate (contract field)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>