unpackaged/main/default/objects/Contract/fields/Dental_business_address_contract_field__c.field-meta.xml
<CustomField>
    <fullName>Dental_business_address_contract_field__c</fullName>
    <label>Dental business address (contract field)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>