unpackaged/main/default/objects/Contract/fields/Professional_Entity_contract_field__c.field-meta.xml
<CustomField>
    <fullName>Professional_Entity_contract_field__c</fullName>
    <description>aka Dental Business name</description>
    <inlineHelpText>aka Dental Business name</inlineHelpText>
    <label>“Professional Entity” (contract field)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>